Fixed modal overflow issues

--- a/dashboard.css
+++ b/dashboard.css
@@ -397,6 +397,19 @@ p.price{
     transition: background-color 200ms ease-in;
     cursor: pointer;
 }
+.checkout{
+    width: 100%;
+    height: 2.2rem;
+    align-self: flex-end;
+    font-size: 1.2rem;
+    background-color:   black;
+    border: 0;
+    border-radius: 2px;
+    color: white;
+    padding: 0;
+    transition: background-color 200ms ease-in;
+    cursor: pointer;
+}
 .smoothie-text{
     width: 100%;
     height: 34%;
@@ -406,7 +419,12 @@ p.price{
     border: 1px solid black;
     color: black;
 }
-.add_to_cart:active{
+.checkout:hover{
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+}
+.add_to_cart:active, .checkout:active{
     background-color: black;
     color: white;
 }
@@ -604,6 +622,7 @@ p.price{
     position: relative;
     z-index: 9999; /* Sit on top */
     left: 0;
+    bottom: 0;
     top: 0;
     width: auto; /* Full width */
     height: 100vh; /* Full height */
@@ -989,6 +1008,14 @@ span.x{
 }
 .cntn-shpg{
     font-size: var(--small-font);
+}
+.sector-model{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(255, 0, 0, 0.706);
+    position: absolute;
+    top: 0;
+    bottom: 0;
 }
 @media screen and (max-width:992px){
     .main-part{
